@startuml

title __HASHMAP's Class Diagram__\n

  namespace problems.HashMap {
    class problems.HashMap.CustomHashMap {
        {static} - INITIAL_SIZE : int
        {static} - MAXIMUM_CAPACITY : int
        - hashTable : Entry[]
        + CustomHashMap()
        + CustomHashMap()
        + get()
        + put()
        {static} - tableSizeFor()
    }
  }
  

  namespace problems.HashMap {
    class problems.HashMap.CustomHashMap.Entry {
        ~ Entry()
    }
  }
  

  namespace problems.HashMap {
    class problems.HashMap.Main {
        {static} + main()
    }
  }
  

  problems.HashMap.CustomHashMap +-down- problems.HashMap.CustomHashMap.Entry
  problems.HashMap.CustomHashMap.Entry o-- K : key
  problems.HashMap.CustomHashMap.Entry o-- problems.HashMap.CustomHashMap.Entry : next
  problems.HashMap.CustomHashMap.Entry o-- V : value


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
